fixed spacing on reviews by having it go in reverse. Not sure if this is better...

--- a/css/style.css
+++ b/css/style.css
@@ -280,9 +280,9 @@ section {
 
 
 .swiper {
-    width: 100%;
+    width: 90%;
     padding: 0px 25px;
-    height: 500px;
+    height: 550px;
   }
 
   .swiper-wrapper {
